Fix bug 399402, make about:plugins without CSS more readable.  r=gemal, sr=neil rashbrook, a=damon.
UltraBlame original commit: 4fb15a064eaca17dbceaa5668a7809a198f21521

--- a/toolkit/content/plugins.css
+++ b/toolkit/content/plugins.css
@@ -467,7 +467,7 @@ the
 about
 :
 plugins
-dialog
+page
 .
 =
 =
@@ -597,7 +597,6 @@ right
 %
 ;
 }
-div
 #
 plugs
 {
@@ -622,7 +621,6 @@ weight
 bold
 ;
 }
-div
 #
 noplugs
 {
@@ -652,7 +650,6 @@ top
 2em
 ;
 }
-div
 .
 plugname
 {
@@ -746,6 +743,18 @@ spacing
 ;
 }
 th
+td
+{
+border
+:
+none
+;
+padding
+:
+3px
+;
+}
+th
 {
 text
 -
@@ -795,14 +804,6 @@ top
 1px
 dotted
 ThreeDShadow
-;
-}
-th
-td
-{
-padding
-:
-3px
 ;
 }
 th
